Added Link 2 files

--- a/hmetro.ipynb
+++ b/hmetro.ipynb
@@ -101,7 +101,7 @@
     "            # in h3 tag, go in and search for 'field-title' tags\n",
     "\n",
     "            # Ex: WKlinik Amal Percuma bantu komuniti memerlukan\n",
-    "            Article_Title = link.find('h3', attrs='field-title').text\n",
+    "            article_title = link.find('h3', attrs='field-title').text\n",
     "\n",
     "            # Ex: January 13, 2023 @ 2:30am\n",
     "            time_date_properties = link.find('span', attrs='created-ago ml-2').text\n",
@@ -123,7 +123,7 @@
     "            # in a's tag, get its url\n",
     "            Link = link.find('a')['href']\n",
     "\n",
-    "            writer.writerow([Article_Title, dateobj, timeobj, Link])"
+    "            writer.writerow([article_title, dateobj, timeobj, Link])"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "\n",
     "with open('hmetro.csv', 'w', newline='') as f:\n",
     "    writer = csv.writer(f)\n",
-    "    headers = [\"Article_Title\", \"Date\", \"Time\", \"Link\"]\n",
+    "    headers = [\"Title\", \"Date\", \"Time\", \"Link\"]\n",
     "    writer.writerow(headers)\n",
     "\n",
     "    for page in range (1, pages_to_get+1):\n",
