Added author's name for link 5

--- a/Link 5 - rakyat_post/the_rakya_post.ipynb
+++ b/Link 5 - rakyat_post/the_rakya_post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,33 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from fake_useragent import UserAgent\n",
     "import csv\n",
-    "import time"
+    "import time\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set driver options - do not pop up chrome and disable pop-ups.\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument(\"--headless\")\n",
+    "chrome_options.add_argument(\"--disable-extensions\")\n",
+    "chrome_options.add_argument(f'user-agent\":{UserAgent().random}')\n",
+    "\n",
+    "# get appropriate drivers for Google Chrome - automatic without downloading driver\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), \n",
+    "                          options=chrome_options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -25,13 +45,13 @@
      "output_type": "stream",
      "text": [
       "Links we obtained: 60\n",
-      "link_with_date we obtained: 60\n"
+      "link_with_date we obtained: 60\n",
+      "link_with_author we obtained: 58\n"
      ]
     }
    ],
    "source": [
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
-    "\n",
+    "pattern = re.compile(r'post-author thb-post-author-(32|26)')\n",
     "# url to scrape \n",
     "url = 'https://www.therakyatpost.com/?s=vaksin'\n",
     "driver.get(url)\n",
@@ -63,12 +83,15 @@
     "print(f'Links we obtained: {len(links)}')\n",
     "\n",
     "link_date = soup.find_all('li', attrs={'class':'post-date'})\n",
-    "print(f'link_with_date we obtained: {len(links)}')"
+    "print(f'link_with_date we obtained: {len(link_date)}')\n",
+    "\n",
+    "link_author = soup.find_all('div', attrs={'class': pattern})\n",
+    "print(f'link_with_author we obtained: {len(link_author)}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -83,10 +106,10 @@
     "# Writing to a file \n",
     "with open('the_rakya_post.csv', 'w', newline='') as f:\n",
     "    writer = csv.writer(f)\n",
-    "    headers = [\"Article_Title\", \"Date\", \"Link\"]\n",
+    "    headers = [\"Article_Title\", \"Date\", \"Link\", \"Author Name\"]\n",
     "    writer.writerow(headers)\n",
     "\n",
-    "    for link, date in zip(links, link_date):\n",
+    "    for link, date, author in zip(links, link_date, link_author):\n",
     "        # in div tag, go in and search for 'a' tags\n",
     "        # Ex: Warga Emas 60 Tahun & Ke Atas Digesa Ambil Suntikan Vaksin Influenza\n",
     "        article_title = link.find('a').text\n",
@@ -100,7 +123,9 @@
     "        # in a's tag, get its link\n",
     "        Link = link.find('a')['href']\n",
     "\n",
-    "        writer.writerow([article_title, dateobj, Link])\n",
+    "        author_name = author.find('a').text\n",
+    "        \n",
+    "        writer.writerow([article_title, dateobj, Link, author_name])\n",
     "\n",
     "    print('CSV file saved successfully')\n"
    ]
