fix all csv files with dates from Jan 2020 - Dec 2022

--- a/Link 2 - hmetro /hmetro.ipynb
+++ b/Link 2 - hmetro /hmetro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,10 +1471,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Author Name</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Ambang gelombang baharu?</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>Utama</td>\n",
+       "      <td>https://www.hmetro.com.my/utama/2023/01/921098...</td>\n",
+       "      <td>Kuala Lumpur: Kerajaan tidak perlu terburu-bur...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Sekat pengembara China bendung Covid-19 tidak ...</td>\n",
+       "      <td>2022-12-29</td>\n",
+       "      <td>18:50:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/12/920...</td>\n",
+       "      <td>Kuala Lumpur: Kementerian Kesihatan (KKM) meny...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Hampir separuh penumpang pesawat China tiba di...</td>\n",
+       "      <td>2022-12-28</td>\n",
+       "      <td>23:52:00</td>\n",
+       "      <td>Eropah</td>\n",
+       "      <td>https://www.hmetro.com.my/global/eropah/2022/1...</td>\n",
+       "      <td>Rome: Pihak berkuasa kesihatan Itali memulakan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Kedatangan pelancong China perlu guna agensi p...</td>\n",
+       "      <td>2022-12-28</td>\n",
+       "      <td>23:36:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/12/920...</td>\n",
+       "      <td>Ampang: Kemasukan pelancong dari China ke nega...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Rakyat disaran ambil dos penggalak Covid-19</td>\n",
+       "      <td>2022-12-28</td>\n",
+       "      <td>20:53:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/12/920...</td>\n",
+       "      <td>Kuala Lumpur: Kementerian Kesihatan (KKM) meny...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>KKM tidak cadang lanjut vaksinasi PICKids</td>\n",
+       "      <td>2022-05-20</td>\n",
+       "      <td>22:11:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/05/844...</td>\n",
+       "      <td>Bagan Serai: Kementerian Kesihatan (KKM) tidak...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>Bakal jemaah haji remaja disaran ambil dos pen...</td>\n",
+       "      <td>2022-05-20</td>\n",
+       "      <td>21:57:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/05/844...</td>\n",
+       "      <td>Kuala Lumpur: Kementerian Kesihatan (KKM) meny...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>Sebarang rawatan baru Covid-19 dikaji terlebih...</td>\n",
+       "      <td>2022-05-20</td>\n",
+       "      <td>21:24:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/05/844...</td>\n",
+       "      <td>Bagan Serai: Sebarang dapatan baru mengenai ra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>Lebih 200,000 penduduk Korea Utara demam</td>\n",
+       "      <td>2022-05-20</td>\n",
+       "      <td>20:11:00</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>https://www.hmetro.com.my/global/asia/2022/05/...</td>\n",
+       "      <td>Pyongyang: Korea Utara melaporkan lebih 200,00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>1,099,250 kanak-kanak lengkap vaksinasi Covid-19</td>\n",
+       "      <td>2022-05-20</td>\n",
+       "      <td>18:50:00</td>\n",
+       "      <td>Mutakhir</td>\n",
+       "      <td>https://www.hmetro.com.my/mutakhir/2022/05/844...</td>\n",
+       "      <td>Kuala Lumpur: Sebanyak 1,099,250 atau 31 perat...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>367 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Title        Date      Time  \\\n",
+       "42                            Ambang gelombang baharu?  2022-12-31  20:00:00   \n",
+       "43   Sekat pengembara China bendung Covid-19 tidak ...  2022-12-29  18:50:00   \n",
+       "44   Hampir separuh penumpang pesawat China tiba di...  2022-12-28  23:52:00   \n",
+       "45   Kedatangan pelancong China perlu guna agensi p...  2022-12-28  23:36:00   \n",
+       "46         Rakyat disaran ambil dos penggalak Covid-19  2022-12-28  20:53:00   \n",
+       "..                                                 ...         ...       ...   \n",
+       "404          KKM tidak cadang lanjut vaksinasi PICKids  2022-05-20  22:11:00   \n",
+       "405  Bakal jemaah haji remaja disaran ambil dos pen...  2022-05-20  21:57:00   \n",
+       "406  Sebarang rawatan baru Covid-19 dikaji terlebih...  2022-05-20  21:24:00   \n",
+       "407           Lebih 200,000 penduduk Korea Utara demam  2022-05-20  20:11:00   \n",
+       "408   1,099,250 kanak-kanak lengkap vaksinasi Covid-19  2022-05-20  18:50:00   \n",
+       "\n",
+       "    Author Name                                               Link  \\\n",
+       "42        Utama  https://www.hmetro.com.my/utama/2023/01/921098...   \n",
+       "43     Mutakhir  https://www.hmetro.com.my/mutakhir/2022/12/920...   \n",
+       "44       Eropah  https://www.hmetro.com.my/global/eropah/2022/1...   \n",
+       "45     Mutakhir  https://www.hmetro.com.my/mutakhir/2022/12/920...   \n",
+       "46     Mutakhir  https://www.hmetro.com.my/mutakhir/2022/12/920...   \n",
+       "..          ...                                                ...   \n",
+       "404    Mutakhir  https://www.hmetro.com.my/mutakhir/2022/05/844...   \n",
+       "405    Mutakhir  https://www.hmetro.com.my/mutakhir/2022/05/844...   \n",
+       "406    Mutakhir  https://www.hmetro.com.my/mutakhir/2022/05/844...   \n",
+       "407        Asia  https://www.hmetro.com.my/global/asia/2022/05/...   \n",
+       "408    Mutakhir  https://www.hmetro.com.my/mutakhir/2022/05/844...   \n",
+       "\n",
+       "                                               Content  \n",
+       "42   Kuala Lumpur: Kerajaan tidak perlu terburu-bur...  \n",
+       "43   Kuala Lumpur: Kementerian Kesihatan (KKM) meny...  \n",
+       "44   Rome: Pihak berkuasa kesihatan Itali memulakan...  \n",
+       "45   Ampang: Kemasukan pelancong dari China ke nega...  \n",
+       "46   Kuala Lumpur: Kementerian Kesihatan (KKM) meny...  \n",
+       "..                                                 ...  \n",
+       "404  Bagan Serai: Kementerian Kesihatan (KKM) tidak...  \n",
+       "405  Kuala Lumpur: Kementerian Kesihatan (KKM) meny...  \n",
+       "406  Bagan Serai: Sebarang dapatan baru mengenai ra...  \n",
+       "407  Pyongyang: Korea Utara melaporkan lebih 200,00...  \n",
+       "408  Kuala Lumpur: Sebanyak 1,099,250 atau 31 perat...  \n",
+       "\n",
+       "[367 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_data_correct_time = pd.read_csv('hemetro_with_text.csv')\n",
+    "site_data_correct_time = site_data_correct_time[(site_data_correct_time['Date'] < '2023-01-01')]\n",
+    "site_data_correct_time.to_csv('hemetro_with_text_corrected.csv', encoding='utf-8', index=False)\n",
+    "site_data_correct_time"
+   ]
   },
   {
    "cell_type": "code",
