--- a/Link 5 - rakyat_post/the_rakya_post.ipynb
+++ b/Link 5 - rakyat_post/the_rakya_post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,6 +1293,188 @@
     "site_data['Content'] = article_text\n",
     "site_data.to_csv('rakya_post_with_text.csv', encoding='utf-8', index=False)\n",
     "site_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article_Title</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Author Name</th>\n",
+       "      <th>Content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Warga Emas 60 Tahun &amp; Ke Atas Digesa Ambil Sun...</td>\n",
+       "      <td>2022-09-08</td>\n",
+       "      <td>https://www.therakyatpost.com/trpbm/berita/202...</td>\n",
+       "      <td>Siti Murni</td>\n",
+       "      <td>Selesema merupakan penyakit respiratori yang b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lelaki Ini Kongsi Prosedur Melancong Ke Thaila...</td>\n",
+       "      <td>2022-05-17</td>\n",
+       "      <td>https://www.therakyatpost.com/trpbm/jalan-jala...</td>\n",
+       "      <td>Farahin Fadzil</td>\n",
+       "      <td>Penerima vaksin jenis Sinovac perlu lengkap ti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15 Mei Sebagai Tarikh Akhir Pemberian Dos Vaks...</td>\n",
+       "      <td>2022-04-14</td>\n",
+       "      <td>https://www.therakyatpost.com/trpbm/berita/202...</td>\n",
+       "      <td>Farahin Fadzil</td>\n",
+       "      <td>Pendaftaran vaksin Covid-19 untuk golongan kan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kesatuan Eropah Iktiraf Sijil Vaksinasi Digita...</td>\n",
+       "      <td>2022-04-05</td>\n",
+       "      <td>https://www.therakyatpost.com/trpbm/berita/202...</td>\n",
+       "      <td>Farahin Fadzil</td>\n",
+       "      <td>Sijil vaksinasi digital di dalam aplikasi MySe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Status Vaksin Sinovac Cuma Bertukar Tidak Leng...</td>\n",
+       "      <td>2022-03-29</td>\n",
+       "      <td>https://www.therakyatpost.com/trpbm/viral/2022...</td>\n",
+       "      <td>Farahin Fadzil</td>\n",
+       "      <td>Pihak Kementerian Kesihatan Malaysia (KKM) men...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>Will You Take The Covid-19 Vaccine? MOH Wants ...</td>\n",
+       "      <td>2020-12-22</td>\n",
+       "      <td>https://www.therakyatpost.com/news/malaysia/20...</td>\n",
+       "      <td>Tasneem Nazari</td>\n",
+       "      <td>They want to see if the masses would accept or...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>Covid-19: PM Muhyiddin Among First To Be Vacci...</td>\n",
+       "      <td>2020-12-06</td>\n",
+       "      <td>https://www.therakyatpost.com/news/malaysia/20...</td>\n",
+       "      <td>Tasneem Nazari</td>\n",
+       "      <td>The government has struck another vaccine deal...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>Covid-19 Vaccine: Health D-G Responds To Reute...</td>\n",
+       "      <td>2020-12-01</td>\n",
+       "      <td>https://www.therakyatpost.com/news/malaysia/20...</td>\n",
+       "      <td>Anne Dorall</td>\n",
+       "      <td>Will we still be getting our vaccine? Probably...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>Pneumococcal Vaccine Now FREE In Klinik Kesiha...</td>\n",
+       "      <td>2020-11-30</td>\n",
+       "      <td>https://www.therakyatpost.com/news/malaysia/20...</td>\n",
+       "      <td>Tasneem Nazari</td>\n",
+       "      <td>If there’s a way to protect our children, why ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>Malaysia Not Giving Covid-19 Vaccine To Childr...</td>\n",
+       "      <td>2019-12-30</td>\n",
+       "      <td>https://www.therakyatpost.com/news/malaysia/20...</td>\n",
+       "      <td>Hakim Hassan</td>\n",
+       "      <td>As long as at least 60% of the population is v...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>346 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Article_Title        Date  \\\n",
+       "0    Warga Emas 60 Tahun & Ke Atas Digesa Ambil Sun...  2022-09-08   \n",
+       "1    Lelaki Ini Kongsi Prosedur Melancong Ke Thaila...  2022-05-17   \n",
+       "2    15 Mei Sebagai Tarikh Akhir Pemberian Dos Vaks...  2022-04-14   \n",
+       "3    Kesatuan Eropah Iktiraf Sijil Vaksinasi Digita...  2022-04-05   \n",
+       "4    Status Vaksin Sinovac Cuma Bertukar Tidak Leng...  2022-03-29   \n",
+       "..                                                 ...         ...   \n",
+       "343  Will You Take The Covid-19 Vaccine? MOH Wants ...  2020-12-22   \n",
+       "344  Covid-19: PM Muhyiddin Among First To Be Vacci...  2020-12-06   \n",
+       "345  Covid-19 Vaccine: Health D-G Responds To Reute...  2020-12-01   \n",
+       "346  Pneumococcal Vaccine Now FREE In Klinik Kesiha...  2020-11-30   \n",
+       "347  Malaysia Not Giving Covid-19 Vaccine To Childr...  2019-12-30   \n",
+       "\n",
+       "                                                  Link     Author Name  \\\n",
+       "0    https://www.therakyatpost.com/trpbm/berita/202...      Siti Murni   \n",
+       "1    https://www.therakyatpost.com/trpbm/jalan-jala...  Farahin Fadzil   \n",
+       "2    https://www.therakyatpost.com/trpbm/berita/202...  Farahin Fadzil   \n",
+       "3    https://www.therakyatpost.com/trpbm/berita/202...  Farahin Fadzil   \n",
+       "4    https://www.therakyatpost.com/trpbm/viral/2022...  Farahin Fadzil   \n",
+       "..                                                 ...             ...   \n",
+       "343  https://www.therakyatpost.com/news/malaysia/20...  Tasneem Nazari   \n",
+       "344  https://www.therakyatpost.com/news/malaysia/20...  Tasneem Nazari   \n",
+       "345  https://www.therakyatpost.com/news/malaysia/20...     Anne Dorall   \n",
+       "346  https://www.therakyatpost.com/news/malaysia/20...  Tasneem Nazari   \n",
+       "347  https://www.therakyatpost.com/news/malaysia/20...    Hakim Hassan   \n",
+       "\n",
+       "                                               Content  \n",
+       "0    Selesema merupakan penyakit respiratori yang b...  \n",
+       "1    Penerima vaksin jenis Sinovac perlu lengkap ti...  \n",
+       "2    Pendaftaran vaksin Covid-19 untuk golongan kan...  \n",
+       "3    Sijil vaksinasi digital di dalam aplikasi MySe...  \n",
+       "4    Pihak Kementerian Kesihatan Malaysia (KKM) men...  \n",
+       "..                                                 ...  \n",
+       "343  They want to see if the masses would accept or...  \n",
+       "344  The government has struck another vaccine deal...  \n",
+       "345  Will we still be getting our vaccine? Probably...  \n",
+       "346  If there’s a way to protect our children, why ...  \n",
+       "347  As long as at least 60% of the population is v...  \n",
+       "\n",
+       "[346 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_data_correct_time = pd.read_csv('rakya_post_with_text.csv')\n",
+    "site_data_correct_time = site_data_correct_time[(site_data_correct_time['Date'] < '2023-01-01')]\n",
+    "site_data_correct_time.to_csv('rakya_post_with_text_corrected.csv', encoding='utf-8', index=False)\n",
+    "site_data_correct_time"
    ]
   },
   {
