--- a/Link 1 - sinarharian/sinarharian.ipynb
+++ b/Link 1 - sinarharian/sinarharian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2565,6 +2565,391 @@
     "site_data['Content'] = article_text\n",
     "site_data.to_csv('sinarharian_with_text.csv', encoding='utf-8', index=False)\n",
     "site_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Author Name</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Article Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Empat kes kematian akibat rabies di Sarawak</td>\n",
+       "      <td>2023-03-06</td>\n",
+       "      <td>15:57:00</td>\n",
+       "      <td>Sabah Sarawak</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/248356/...</td>\n",
+       "      <td>KUCHING - Sarawak mencatatkan enam kes jangki...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tepatkah langkah LTAT menswastakan Bousted?</td>\n",
+       "      <td>2023-03-03</td>\n",
+       "      <td>17:45:00</td>\n",
+       "      <td>BISNES</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/248000/...</td>\n",
+       "      <td>INSTITUSI keselamatan sosial dan badan berkan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Taiwan dipilih destinasi pilihan Asia - MATTA</td>\n",
+       "      <td>2023-03-03</td>\n",
+       "      <td>11:02:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/247918/...</td>\n",
+       "      <td>KUALA LUMPUR - Taiwan dipilih sebagai destina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Permintaan vaksin Covid-19 rendah, Pharmaniaga...</td>\n",
+       "      <td>2023-02-27</td>\n",
+       "      <td>23:05:00</td>\n",
+       "      <td>BISNES</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/247355/...</td>\n",
+       "      <td>PHARMANIAGA Bhd telah mencatatkan kerugian be...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[VIDEO] Perolehan vaksin Covid-19 ikut prosedu...</td>\n",
+       "      <td>2023-02-09</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/244323/...</td>\n",
+       "      <td>SHAH ALAM - Bekas Menteri Kesihatan, Khairy J...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>835</th>\n",
+       "      <td>Peka B40 'game changer' untuk perkhidmatan kes...</td>\n",
+       "      <td>2020-01-11</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65459/b...</td>\n",
+       "      <td>KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>836</th>\n",
+       "      <td>KKM sahkan tiga kes polio di Sabah</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>11:55:00</td>\n",
+       "      <td>Sabah Sarawak</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65319/e...</td>\n",
+       "      <td>SHAH ALAM - Kementerian Kesihatan (KKM) memak...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>837</th>\n",
+       "      <td>Dua kes influenza A di Selangor di Cyberjaya, ...</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>10:05:00</td>\n",
+       "      <td>Selangor KL</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65308/e...</td>\n",
+       "      <td>SHAH ALAM - Jabatan Kesihatan Negeri Selangor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>838</th>\n",
+       "      <td>Influenza: Pesakit wajib dikuarantin elak penu...</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>08:45:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65297/b...</td>\n",
+       "      <td>SHAH ALAM - Kerajaan perlu mewajibkan arahan ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>839</th>\n",
+       "      <td>Bekalan vaksin influenza di klinik swasta terhad</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>08:40:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65298/b...</td>\n",
+       "      <td>KUALA LUMPUR - Selepas isu dakwaan kekurangan...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>840 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Title        Date      Time  \\\n",
+       "0          Empat kes kematian akibat rabies di Sarawak  2023-03-06  15:57:00   \n",
+       "1          Tepatkah langkah LTAT menswastakan Bousted?  2023-03-03  17:45:00   \n",
+       "2        Taiwan dipilih destinasi pilihan Asia - MATTA  2023-03-03  11:02:00   \n",
+       "3    Permintaan vaksin Covid-19 rendah, Pharmaniaga...  2023-02-27  23:05:00   \n",
+       "4    [VIDEO] Perolehan vaksin Covid-19 ikut prosedu...  2023-02-09  08:00:00   \n",
+       "..                                                 ...         ...       ...   \n",
+       "835  Peka B40 'game changer' untuk perkhidmatan kes...  2020-01-11  10:30:00   \n",
+       "836                 KKM sahkan tiga kes polio di Sabah  2020-01-10  11:55:00   \n",
+       "837  Dua kes influenza A di Selangor di Cyberjaya, ...  2020-01-10  10:05:00   \n",
+       "838  Influenza: Pesakit wajib dikuarantin elak penu...  2020-01-10  08:45:00   \n",
+       "839   Bekalan vaksin influenza di klinik swasta terhad  2020-01-10  08:40:00   \n",
+       "\n",
+       "         Author Name                                               Link  \\\n",
+       "0     Sabah Sarawak   https://www.sinarharian.com.my/article/248356/...   \n",
+       "1            BISNES   https://www.sinarharian.com.my/article/248000/...   \n",
+       "2          Nasional   https://www.sinarharian.com.my/article/247918/...   \n",
+       "3            BISNES   https://www.sinarharian.com.my/article/247355/...   \n",
+       "4          Nasional   https://www.sinarharian.com.my/article/244323/...   \n",
+       "..               ...                                                ...   \n",
+       "835        Nasional   https://www.sinarharian.com.my/article/65459/b...   \n",
+       "836   Sabah Sarawak   https://www.sinarharian.com.my/article/65319/e...   \n",
+       "837     Selangor KL   https://www.sinarharian.com.my/article/65308/e...   \n",
+       "838        Nasional   https://www.sinarharian.com.my/article/65297/b...   \n",
+       "839        Nasional   https://www.sinarharian.com.my/article/65298/b...   \n",
+       "\n",
+       "                                   Article Description  \n",
+       "0     KUCHING - Sarawak mencatatkan enam kes jangki...  \n",
+       "1     INSTITUSI keselamatan sosial dan badan berkan...  \n",
+       "2     KUALA LUMPUR - Taiwan dipilih sebagai destina...  \n",
+       "3     PHARMANIAGA Bhd telah mencatatkan kerugian be...  \n",
+       "4     SHAH ALAM - Bekas Menteri Kesihatan, Khairy J...  \n",
+       "..                                                 ...  \n",
+       "835   KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...  \n",
+       "836   SHAH ALAM - Kementerian Kesihatan (KKM) memak...  \n",
+       "837   SHAH ALAM - Jabatan Kesihatan Negeri Selangor...  \n",
+       "838   SHAH ALAM - Kerajaan perlu mewajibkan arahan ...  \n",
+       "839   KUALA LUMPUR - Selepas isu dakwaan kekurangan...  \n",
+       "\n",
+       "[840 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_data_correct_time = pd.read_csv('sinarharian.csv')\n",
+    "site_data_correct_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Author Name</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Article Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Rukun Tetangga: Tonggak perpaduan dalam komuniti</td>\n",
+       "      <td>2022-11-17</td>\n",
+       "      <td>11:08:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/231704/...</td>\n",
+       "      <td>Ditubuhkan pada tahun 1975 oleh Perdana Mente...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>KJ, Dr Noor Hisham disaman isu vaksin Covid-19</td>\n",
+       "      <td>2022-11-16</td>\n",
+       "      <td>17:41:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/231609/...</td>\n",
+       "      <td>SHAH ALAM - Sekumpulan rakyat Malaysia memfai...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Berita palsu antara punca masyarakat Melayu to...</td>\n",
+       "      <td>2022-02-28</td>\n",
+       "      <td>13:45:00</td>\n",
+       "      <td>Covid-19</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/190182/...</td>\n",
+       "      <td>GEORGETOWN - Berita palsu yang disebarkan mel...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Berangan Aqua Park tarikan baharu di Kedah</td>\n",
+       "      <td>2021-09-09</td>\n",
+       "      <td>09:10:00</td>\n",
+       "      <td>EDISI</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/160373/...</td>\n",
+       "      <td>SUNGAI PETANI - Taman tema mini, Berangan Aqu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Haram menolak pengambilan vaksin</td>\n",
+       "      <td>2021-05-23</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>Pendapat</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/139989/...</td>\n",
+       "      <td>MANA-mana pihak, individu, agamawan, ilmuan y...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>835</th>\n",
+       "      <td>Peka B40 'game changer' untuk perkhidmatan kes...</td>\n",
+       "      <td>2020-01-11</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65459/b...</td>\n",
+       "      <td>KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>836</th>\n",
+       "      <td>KKM sahkan tiga kes polio di Sabah</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>11:55:00</td>\n",
+       "      <td>Sabah Sarawak</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65319/e...</td>\n",
+       "      <td>SHAH ALAM - Kementerian Kesihatan (KKM) memak...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>837</th>\n",
+       "      <td>Dua kes influenza A di Selangor di Cyberjaya, ...</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>10:05:00</td>\n",
+       "      <td>Selangor KL</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65308/e...</td>\n",
+       "      <td>SHAH ALAM - Jabatan Kesihatan Negeri Selangor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>838</th>\n",
+       "      <td>Influenza: Pesakit wajib dikuarantin elak penu...</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>08:45:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65297/b...</td>\n",
+       "      <td>SHAH ALAM - Kerajaan perlu mewajibkan arahan ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>839</th>\n",
+       "      <td>Bekalan vaksin influenza di klinik swasta terhad</td>\n",
+       "      <td>2020-01-10</td>\n",
+       "      <td>08:40:00</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>https://www.sinarharian.com.my/article/65298/b...</td>\n",
+       "      <td>KUALA LUMPUR - Selepas isu dakwaan kekurangan...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>831 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Title        Date      Time  \\\n",
+       "9     Rukun Tetangga: Tonggak perpaduan dalam komuniti  2022-11-17  11:08:00   \n",
+       "10      KJ, Dr Noor Hisham disaman isu vaksin Covid-19  2022-11-16  17:41:00   \n",
+       "11   Berita palsu antara punca masyarakat Melayu to...  2022-02-28  13:45:00   \n",
+       "12          Berangan Aqua Park tarikan baharu di Kedah  2021-09-09  09:10:00   \n",
+       "13                    Haram menolak pengambilan vaksin  2021-05-23  08:00:00   \n",
+       "..                                                 ...         ...       ...   \n",
+       "835  Peka B40 'game changer' untuk perkhidmatan kes...  2020-01-11  10:30:00   \n",
+       "836                 KKM sahkan tiga kes polio di Sabah  2020-01-10  11:55:00   \n",
+       "837  Dua kes influenza A di Selangor di Cyberjaya, ...  2020-01-10  10:05:00   \n",
+       "838  Influenza: Pesakit wajib dikuarantin elak penu...  2020-01-10  08:45:00   \n",
+       "839   Bekalan vaksin influenza di klinik swasta terhad  2020-01-10  08:40:00   \n",
+       "\n",
+       "         Author Name                                               Link  \\\n",
+       "9          Nasional   https://www.sinarharian.com.my/article/231704/...   \n",
+       "10         Nasional   https://www.sinarharian.com.my/article/231609/...   \n",
+       "11         Covid-19   https://www.sinarharian.com.my/article/190182/...   \n",
+       "12            EDISI   https://www.sinarharian.com.my/article/160373/...   \n",
+       "13         Pendapat   https://www.sinarharian.com.my/article/139989/...   \n",
+       "..               ...                                                ...   \n",
+       "835        Nasional   https://www.sinarharian.com.my/article/65459/b...   \n",
+       "836   Sabah Sarawak   https://www.sinarharian.com.my/article/65319/e...   \n",
+       "837     Selangor KL   https://www.sinarharian.com.my/article/65308/e...   \n",
+       "838        Nasional   https://www.sinarharian.com.my/article/65297/b...   \n",
+       "839        Nasional   https://www.sinarharian.com.my/article/65298/b...   \n",
+       "\n",
+       "                                   Article Description  \n",
+       "9     Ditubuhkan pada tahun 1975 oleh Perdana Mente...  \n",
+       "10    SHAH ALAM - Sekumpulan rakyat Malaysia memfai...  \n",
+       "11    GEORGETOWN - Berita palsu yang disebarkan mel...  \n",
+       "12    SUNGAI PETANI - Taman tema mini, Berangan Aqu...  \n",
+       "13    MANA-mana pihak, individu, agamawan, ilmuan y...  \n",
+       "..                                                 ...  \n",
+       "835   KUALA LUMPUR - Skim Peduli Kesihatan untuk Ku...  \n",
+       "836   SHAH ALAM - Kementerian Kesihatan (KKM) memak...  \n",
+       "837   SHAH ALAM - Jabatan Kesihatan Negeri Selangor...  \n",
+       "838   SHAH ALAM - Kerajaan perlu mewajibkan arahan ...  \n",
+       "839   KUALA LUMPUR - Selepas isu dakwaan kekurangan...  \n",
+       "\n",
+       "[831 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_data_correct_time = site_data_correct_time[(site_data_correct_time['Date'] < '2023-01-01')]\n",
+    "site_data_correct_time.to_csv('sinarharian_with_text_corrected.csv', encoding='utf-8', index=False)\n",
+    "site_data_correct_time"
    ]
   },
   {
