--- a/Link 3 - haraka_daily/harakah_daily.ipynb
+++ b/Link 3 - haraka_daily/harakah_daily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6826,6 +6826,200 @@
     "site_data['Content'] = article_text\n",
     "site_data.to_csv('hemetro_with_text.csv', encoding='utf-8', index=False)\n",
     "site_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Post_Category</th>\n",
+       "      <th>Content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>130 rakyat Singapura tersalah terima dos vaksi...</td>\n",
+       "      <td>2022-10-04</td>\n",
+       "      <td>10:01:28</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2022/10/04/...</td>\n",
+       "      <td>Global</td>\n",
+       "      <td>SINGAPURA: Seramai 130 rakyat Singapura telah ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.5 juta kanak-kanak belum divaksin</td>\n",
+       "      <td>2022-07-28</td>\n",
+       "      <td>13:24:14</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2022/07/28/...</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>Oleh SYAHIRAH SALLEHKUALA LUMPUR: Seramai 1,51...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Majikan galak ibu bapa bawa anak terima vaksin</td>\n",
+       "      <td>2022-05-11</td>\n",
+       "      <td>13:07:07</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2022/05/11/...</td>\n",
+       "      <td>Berita</td>\n",
+       "      <td>KOTA KINABALU: Kadar vaksinasi dalam kalangan ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Covid: 881,602 kanak-kanak lengkap vaksinasi</td>\n",
+       "      <td>2022-05-06</td>\n",
+       "      <td>10:28:01</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2022/05/06/...</td>\n",
+       "      <td>Berita</td>\n",
+       "      <td>KUALA LUMPUR: Sejumlah 881,602 atau 24.8 perat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Penerima vaksin Sinovac lebih mudah alami simp...</td>\n",
+       "      <td>2022-04-14</td>\n",
+       "      <td>15:13:37</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2022/04/14/...</td>\n",
+       "      <td>Global</td>\n",
+       "      <td>SINGAPURA: Individu yang mengambil vaksin Coro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2503</th>\n",
+       "      <td>Kuarantin selaras ajaran Islam, dipraktikkan d...</td>\n",
+       "      <td>2020-02-02</td>\n",
+       "      <td>00:01:30</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2020/02/02/...</td>\n",
+       "      <td>Nasional</td>\n",
+       "      <td>SERUAN untuk mengisolasi sebuah daerah yang di...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2504</th>\n",
+       "      <td>WEF2020: Apa langkah Malaysia seterusnya?</td>\n",
+       "      <td>2020-02-01</td>\n",
+       "      <td>19:03:48</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2020/02/01/...</td>\n",
+       "      <td>Global</td>\n",
+       "      <td>TIDAK banyak liputan media tempatan mengenai W...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2505</th>\n",
+       "      <td>Virus Corona: Kembali kepada sistem Islam</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>17:43:59</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2020/01/26/...</td>\n",
+       "      <td>Global</td>\n",
+       "      <td>CHINA diserang virus  (1)     Hari ini kita di...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2506</th>\n",
+       "      <td>Penyakit Influenza Virus Corona Wuhan (2019 n-...</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>08:46:49</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2020/01/26/...</td>\n",
+       "      <td>Berita</td>\n",
+       "      <td>JANGKITAN Influenza Wuhan merupakan penyakit s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2507</th>\n",
+       "      <td>Insentif e-Tunai, bimbang keselamatan digital</td>\n",
+       "      <td>2020-01-16</td>\n",
+       "      <td>06:08:09</td>\n",
+       "      <td>https://harakahdaily.net/index.php/2020/01/16/...</td>\n",
+       "      <td>Berita</td>\n",
+       "      <td>KUALA LUMPUR: Kerajaan mengumumkan peruntukan ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2481 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Title        Date      Time  \\\n",
+       "3     130 rakyat Singapura tersalah terima dos vaksi...  2022-10-04  10:01:28   \n",
+       "4                   1.5 juta kanak-kanak belum divaksin  2022-07-28  13:24:14   \n",
+       "5        Majikan galak ibu bapa bawa anak terima vaksin  2022-05-11  13:07:07   \n",
+       "6          Covid: 881,602 kanak-kanak lengkap vaksinasi  2022-05-06  10:28:01   \n",
+       "7     Penerima vaksin Sinovac lebih mudah alami simp...  2022-04-14  15:13:37   \n",
+       "...                                                 ...         ...       ...   \n",
+       "2503  Kuarantin selaras ajaran Islam, dipraktikkan d...  2020-02-02  00:01:30   \n",
+       "2504          WEF2020: Apa langkah Malaysia seterusnya?  2020-02-01  19:03:48   \n",
+       "2505          Virus Corona: Kembali kepada sistem Islam  2020-01-26  17:43:59   \n",
+       "2506  Penyakit Influenza Virus Corona Wuhan (2019 n-...  2020-01-26  08:46:49   \n",
+       "2507      Insentif e-Tunai, bimbang keselamatan digital  2020-01-16  06:08:09   \n",
+       "\n",
+       "                                                   Link Post_Category  \\\n",
+       "3     https://harakahdaily.net/index.php/2022/10/04/...        Global   \n",
+       "4     https://harakahdaily.net/index.php/2022/07/28/...      Nasional   \n",
+       "5     https://harakahdaily.net/index.php/2022/05/11/...        Berita   \n",
+       "6     https://harakahdaily.net/index.php/2022/05/06/...        Berita   \n",
+       "7     https://harakahdaily.net/index.php/2022/04/14/...        Global   \n",
+       "...                                                 ...           ...   \n",
+       "2503  https://harakahdaily.net/index.php/2020/02/02/...      Nasional   \n",
+       "2504  https://harakahdaily.net/index.php/2020/02/01/...        Global   \n",
+       "2505  https://harakahdaily.net/index.php/2020/01/26/...        Global   \n",
+       "2506  https://harakahdaily.net/index.php/2020/01/26/...        Berita   \n",
+       "2507  https://harakahdaily.net/index.php/2020/01/16/...        Berita   \n",
+       "\n",
+       "                                                Content  \n",
+       "3     SINGAPURA: Seramai 130 rakyat Singapura telah ...  \n",
+       "4     Oleh SYAHIRAH SALLEHKUALA LUMPUR: Seramai 1,51...  \n",
+       "5     KOTA KINABALU: Kadar vaksinasi dalam kalangan ...  \n",
+       "6     KUALA LUMPUR: Sejumlah 881,602 atau 24.8 perat...  \n",
+       "7     SINGAPURA: Individu yang mengambil vaksin Coro...  \n",
+       "...                                                 ...  \n",
+       "2503  SERUAN untuk mengisolasi sebuah daerah yang di...  \n",
+       "2504  TIDAK banyak liputan media tempatan mengenai W...  \n",
+       "2505  CHINA diserang virus  (1)     Hari ini kita di...  \n",
+       "2506  JANGKITAN Influenza Wuhan merupakan penyakit s...  \n",
+       "2507  KUALA LUMPUR: Kerajaan mengumumkan peruntukan ...  \n",
+       "\n",
+       "[2481 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_data_correct_time = pd.read_csv('hemetro_with_text.csv')\n",
+    "site_data_correct_time = site_data_correct_time[(site_data_correct_time['Date'] < '2023-01-01')]\n",
+    "site_data_correct_time.to_csv('harakah_with_text_corrected.csv', encoding='utf-8', index=False)\n",
+    "site_data_correct_time"
    ]
   },
   {
