--- a/Link 2 - hmetro /hmetro.ipynb
+++ b/Link 2 - hmetro /hmetro.ipynb
@@ -1657,6 +1657,7 @@
     }
    ],
    "source": [
+    "# only get dates before 2023\n",
     "site_data_correct_time = pd.read_csv('hemetro_with_text.csv')\n",
     "site_data_correct_time = site_data_correct_time[(site_data_correct_time['Date'] < '2023-01-01')]\n",
     "site_data_correct_time.to_csv('hemetro_with_text_corrected.csv', encoding='utf-8', index=False)\n",
